--- a/initial-conf/php.ini
+++ b/initial-conf/php.ini
@@ -5,7 +5,9 @@ max_input_time = 180
 register_argc_argv = Off
 file_uploads = On
 upload_tmp_dir = /ftmp
-upload_max_filesize = 8M
-post_max_size = 10M
+upload_max_filesize = 12M
+enable_dl = On
+extension_dir= "/usr/www/phpext"
+post_max_size = 12M
 html_errors = Off
 include_path = ".:/etc/inc:/usr/www:/usr/captiveportal"
