--- a/mtree.conf
+++ b/mtree.conf
@@ -108,6 +108,11 @@ auth
 # ./usr/libexec/auth
 ..
 
+# ./usr/local/sbin
+sbin
+# ./usr/local/sbin
+..
+
 # ./usr/libexec
 ..
 
@@ -115,6 +120,7 @@ auth
 sbin
 # ./usr/sbin
 ..
+
 
 # ./usr/share
 share
