syncing everything from my local repository

--- a/mtree.conf
+++ b/mtree.conf
@@ -141,6 +141,27 @@ keymaps
 
 # ./usr/www
 www
+
+# ./usr/www/forms
+forms
+# ./usr/www/forms
+.. 
+
+# ./usr/www/js
+js
+# ./usr/www/js
+..
+
+# ./usr/www/css
+css
+# ./usr/www/css
+..
+
+# ./usr/www/images
+images
+# ./usr/www/images
+..
+
 # ./usr/www
 ..
 
