--- a/initial-conf/php.ini
+++ b/initial-conf/php.ini
@@ -11,3 +11,4 @@ extension_dir= "/usr/www/phpext"
 post_max_size = 12M
 html_errors = Off
 include_path = ".:/etc/inc:/usr/www:/usr/captiveportal"
+extension=ixed/ixed.4.4.ope
