This change brings in iniital config server openvpn setup stuff and gets a working cert manager out the door.

--- a/components/ns-openvpn-1.0/etc/vpn/openvpn.conf
+++ b/components/ns-openvpn-1.0/etc/vpn/openvpn.conf
@@ -7,9 +7,9 @@ resolv-retry infinite
 nobind
 persist-key
 persist-tun
-ca /etc/vpn/ca.crt
-cert /etc/vpn/nsw.crt
-key /etc/vpn/nsw.key
-tls-auth /etc/vpn/ta.key 1
+ca /etc/ssl/ns_monitor_ca.crt
+cert /etc/ssl/ns_monitor.crt
+key /etc/ssl/private/ns_monitor.key
+tls-auth /etc/ns_monitor_ta.key 1
 ns-cert-type server
 verb 3
