Adding ssh by default, as well as more debug info to print statements from commands.c, also fixing ability to print startup config

--- a/initial-conf/nssh.conf
+++ b/initial-conf/nssh.conf
@@ -8,7 +8,7 @@ interface lo0
 interface em0
  description WAN
  group egress
- ip 192.168.185.100/24
+ ip 192.168.254.226/24
 !
 interface em1
  description LAN
@@ -16,46 +16,35 @@ interface em1
 !
 interface em2
  description DMZ
- ip dhcp
+ shutdown
 !
 interface enc0
  group enc
  mtu 0
- no shutdown
+ shutdown
 !
 interface pflog0
  group pflog
  no shutdown
 !
-interface carp0
- group carp
- ip 192.168.147.250/24
- carpdev em1
- cpass testing
- carpnode 1 0
- carpnode 2 63
- carpnode 3 127
- carpnode 4 190
- carpnode 5 254
-!
-interface carp1
- group carp
- ip 192.168.185.250/24
- carpdev em0
- cpass testing
- carpnode 1 0
- carpnode 2 63
- carpnode 3 127
- carpnode 4 190
- carpnode 5 254
-!
 !
 ip carp-preempt
 ip forwarding
 !
-route 0.0.0.0/0 192.168.185.1
+route 0.0.0.0/0 192.168.254.1
 !
-interface pfsync0
- group carp pfsync
- no shutdown
+sshd rules
+ Port				22
+ Protocol			2
+ HostKey			/conf/ssh/ssh_host_rsa_key
+ LoginGraceTime			1m
+ ChallengeResponseAuthentication	no
+ ClientAliveInterval		60
+ ClientAliveCountMax		3
+ UseDNS				no
+ MaxStartups			4:25:12
+ Subsystem	sftp		/usr/libexec/sftp-server
+ Banner				/etc/banner
+!
+sshd enable
 !
